* level and experience are now shown within the TCU levels GUI  * updated target tags to include all relevant minecraft entities  * some code cleanup

--- a/src/main/resources/assets/sapturretmod/lang/en_us.json
+++ b/src/main/resources/assets/sapturretmod/lang/en_us.json
@@ -150,7 +150,7 @@
   "gui.sapturretmod.tcu.sapturretmod:targets_smart": "Smart Target Settings",
   "gui.sapturretmod.tcu.sapturretmod:colorizer": "Shield Color Settings",
   "gui.sapturretmod.tcu.sapturretmod:upgrades": "Upgrades",
-  "gui.sapturretmod.tcu.sapturretmod:leveling": "Leveling",
+  "gui.sapturretmod.tcu.sapturretmod:levels": "Leveling",
   "gui.sapturretmod.tcu.sapturretmod:remote_access": "Remote Access",
 
   "gui.sapturretmod.tcu.info.health.tooltip": "Health",
@@ -177,6 +177,11 @@
   "gui.sapturretmod.tcu.targets.creature.select_mobs": "Select Monster",
   "gui.sapturretmod.tcu.targets.creature.select_animals": "Select Animals",
   "gui.sapturretmod.tcu.targets.creature.select_other": "Select Other",
+  "gui.sapturretmod.tcu.leveling.current_level": "Level: %s",
+  "gui.sapturretmod.tcu.leveling.excess_xp": "Excess XP: %s",
+  "gui.sapturretmod.tcu.leveling.modifier": "Modifiers",
+  "gui.sapturretmod.tcu.leveling.retrieve": "Retrieve excess XP",
+  "gui.sapturretmod.tcu.leveling.modValue": "%s %%",
 
   "gui.sapturretmod.tcu.targets.search.placeholder": "Search for targets",
   "gui.sapturretmod.tcu.text.targets_smart.turret": "Turret Awareness",
@@ -185,12 +190,9 @@
   "gui.sapturretmod.tcu.text.targets_smart.count": "Count Awareness",
   "gui.sapturretmod.tcu.text.colorizer.colorcode": "Color Code",
   "gui.sapturretmod.tcu.text.colorizer.cullfaces": "Cull Inner Faces",
-  "gui.sapturretmod.tcu.tooltip.leveling.retrieve": "Retrieve excess XP",
-  "gui.sapturretmod.tcu.text.leveling.xp": "XP: %s",
-  "gui.sapturretmod.tcu.text.leveling.modifier": "Modifiers",
-  "gui.sapturretmod.tcu.text.leveling.modValue": "%s %%",
   "gui.sapturretmod.tcu.text.remote_access.ammo": "Ammunition",
   "gui.sapturretmod.tcu.text.remote_access.repair_kit": "Repair Kits",
+
   "gui.sapturretmod.tcu.tooltip.targets.smart.turret_ignore": "Ignore other turrets",
   "gui.sapturretmod.tcu.tooltip.targets.smart.turret_same": "Ignore entities targeted\\nby turrets of the same type",
   "gui.sapturretmod.tcu.tooltip.targets.smart.turret_all": "Ignore entities targeted\\nby turrets of any type",
