finished up levels TCU GUI

--- a/src/main/resources/assets/sapturretmod/lang/en_us.json
+++ b/src/main/resources/assets/sapturretmod/lang/en_us.json
@@ -96,19 +96,9 @@
   "item.sapturretmod.remote_access_upgrade": "Remote Access Upgrade",
 
   "_comment": "### Entities ####",
-  "attribute.generic.maxHealth": "Max. Health",
-  "attribute.generic.followRange": "Follow Range",
-  "attribute.generic.knockbackResistance": "Knockback Resistance",
-  "attribute.generic.movementSpeed": "Movement Speed",
-  "attribute.generic.flyingSpeed": "Flying Speed",
-  "attribute.generic.attackDamage": "Attack Damage",
-  "attribute.generic.attackSpeed": "Attack Speed",
-  "attribute.generic.armor": "Armor",
-  "attribute.generic.armorToughness": "Armor Toughness",
-  "attribute.generic.luck": "Luck",
-  "attribute.sapturretmod.maxAmmoCapacity": "Max. Ammo Capacity",
-  "attribute.sapturretmod.maxReloadTicks": "Reload Time",
-  "attribute.sapturretmod.maxInitShootTicks": "Targeting Time",
+  "attribute.name.sapturretmod.max_ammo_capacity": "Max. Ammo Capacity",
+  "attribute.name.sapturretmod.max_reload_ticks": "Reload Time",
+  "attribute.name.sapturretmod.max_init_shoot_ticks": "Targeting Time",
   "_comment": "Turrets",
   "entity.sapturretmod.crossbow_turret": "Crossbow Turret (T1)",
   "entity.sapturretmod.harpoon_turret": "Harpoon Turret (T1)",
@@ -150,7 +140,7 @@
   "gui.sapturretmod.tcu.sapturretmod:targets_smart": "Smart Target Settings",
   "gui.sapturretmod.tcu.sapturretmod:colorizer": "Shield Color Settings",
   "gui.sapturretmod.tcu.sapturretmod:upgrades": "Upgrades",
-  "gui.sapturretmod.tcu.sapturretmod:levels": "Leveling",
+  "gui.sapturretmod.tcu.sapturretmod:leveling": "Leveling",
   "gui.sapturretmod.tcu.sapturretmod:remote_access": "Remote Access",
 
   "gui.sapturretmod.tcu.info.health.tooltip": "Health",
@@ -177,8 +167,8 @@
   "gui.sapturretmod.tcu.targets.creature.select_mobs": "Select Monster",
   "gui.sapturretmod.tcu.targets.creature.select_animals": "Select Animals",
   "gui.sapturretmod.tcu.targets.creature.select_other": "Select Other",
-  "gui.sapturretmod.tcu.leveling.current_level": "Level: %s",
-  "gui.sapturretmod.tcu.leveling.excess_xp": "Excess XP: %s",
+  "gui.sapturretmod.tcu.leveling.current_level": "%s",
+  "gui.sapturretmod.tcu.leveling.excess_xp": "(+%s XP)",
   "gui.sapturretmod.tcu.leveling.modifier": "Modifiers",
   "gui.sapturretmod.tcu.leveling.retrieve": "Retrieve excess XP",
   "gui.sapturretmod.tcu.leveling.modValue": "%s %%",
