re-added (but not finished) smart targeting upgrade

--- a/src/main/resources/assets/sapturretmod/lang/en_us.json
+++ b/src/main/resources/assets/sapturretmod/lang/en_us.json
@@ -173,31 +173,30 @@
   "gui.sapturretmod.tcu.leveling.modifier": "Modifiers",
   "gui.sapturretmod.tcu.leveling.retrieve": "Retrieve excess XP",
   "gui.sapturretmod.tcu.leveling.modValue": "%s %%",
-
+  "gui.sapturretmod.tcu.targets.smart.turret": "Turret Awareness",
+  "gui.sapturretmod.tcu.targets.smart.tamed": "Tamed Awareness",
+  "gui.sapturretmod.tcu.targets.smart.age": "Age Awareness",
+  "gui.sapturretmod.tcu.targets.smart.count": "Count Awareness",
+  "gui.sapturretmod.tcu.targets.smart.turret_ignore": "Ignore other turrets",
+  "gui.sapturretmod.tcu.targets.smart.turret_same": "Ignore entities targeted\nby turrets of the same type",
+  "gui.sapturretmod.tcu.targets.smart.turret_all": "Ignore entities targeted\nby turrets of any type",
+  "gui.sapturretmod.tcu.targets.smart.tamed_all": "Target all tamed entities",
+  "gui.sapturretmod.tcu.targets.smart.tamed_players": "Only target tamed entities\nfrom targeted players",
+  "gui.sapturretmod.tcu.targets.smart.tamed_none": "Don't target tamed entities",
+  "gui.sapturretmod.tcu.targets.smart.child_adult": "Target children and adults",
+  "gui.sapturretmod.tcu.targets.smart.child_only": "Target only children",
+  "gui.sapturretmod.tcu.targets.smart.adult_only": "Target only adults",
+  "gui.sapturretmod.tcu.targets.smart.count_no": "Ignore entity count",
+  "gui.sapturretmod.tcu.targets.smart.count_global_less": "Shoot when global entity\namount is less than...",
+  "gui.sapturretmod.tcu.targets.smart.count_global_more": "Shoot when global entity\namount is more than...",
+  "gui.sapturretmod.tcu.targets.smart.count_individual_less": "Shoot when amount of the same\ntype of entity is less than...",
+  "gui.sapturretmod.tcu.targets.smart.count_individual_more": "Shoot when amount of the same\ntype of entity is more than...",
   "gui.sapturretmod.tcu.targets.search.placeholder": "Search for targets",
-  "gui.sapturretmod.tcu.text.targets_smart.turret": "Turret Awareness",
-  "gui.sapturretmod.tcu.text.targets_smart.tamed": "Tamed Awareness",
-  "gui.sapturretmod.tcu.text.targets_smart.age": "Age Awareness",
-  "gui.sapturretmod.tcu.text.targets_smart.count": "Count Awareness",
-  "gui.sapturretmod.tcu.text.colorizer.colorcode": "Color Code",
-  "gui.sapturretmod.tcu.text.colorizer.cullfaces": "Cull Inner Faces",
-  "gui.sapturretmod.tcu.text.remote_access.ammo": "Ammunition",
-  "gui.sapturretmod.tcu.text.remote_access.repair_kit": "Repair Kits",
+  "gui.sapturretmod.tcu.colorizer.colorcode": "Color Code",
+  "gui.sapturretmod.tcu.colorizer.cullfaces": "Cull Inner Faces",
+  "gui.sapturretmod.tcu.remote_access.ammo": "Ammunition",
+  "gui.sapturretmod.tcu.remote_access.repair_kit": "Repair Kits",
 
-  "gui.sapturretmod.tcu.tooltip.targets.smart.turret_ignore": "Ignore other turrets",
-  "gui.sapturretmod.tcu.tooltip.targets.smart.turret_same": "Ignore entities targeted\\nby turrets of the same type",
-  "gui.sapturretmod.tcu.tooltip.targets.smart.turret_all": "Ignore entities targeted\\nby turrets of any type",
-  "gui.sapturretmod.tcu.tooltip.targets.smart.tamed_all": "Target all tamed entities",
-  "gui.sapturretmod.tcu.tooltip.targets.smart.tamed_players": "Only target tamed entities\\nfrom targeted players",
-  "gui.sapturretmod.tcu.tooltip.targets.smart.tamed_none": "Don't target tamed entities",
-  "gui.sapturretmod.tcu.tooltip.targets.smart.child_adult": "Target children and adults",
-  "gui.sapturretmod.tcu.tooltip.targets.smart.child_only": "Target only children",
-  "gui.sapturretmod.tcu.tooltip.targets.smart.adult_only": "Target only adults",
-  "gui.sapturretmod.tcu.tooltip.targets.smart.count_no": "Ignore entity count",
-  "gui.sapturretmod.tcu.tooltip.targets.smart.count_global_less": "Shoot when global entity\\namount is less than...",
-  "gui.sapturretmod.tcu.tooltip.targets.smart.count_global_more": "Shoot when global entity\\namount is more than...",
-  "gui.sapturretmod.tcu.tooltip.targets.smart.count_individual_less": "Shoot when amount of the same\\ntype of entity is less than...",
-  "gui.sapturretmod.tcu.tooltip.targets.smart.count_individual_more": "Shoot when amount of the same\\ntype of entity is more than...",
   "_comment": "Assembly",
   "gui.sapturretmod.tassembly.cancel": "Cancel",
   "gui.sapturretmod.tassembly.automate.enable": "Automate",
