added priority awareness to smart targeting TCU GUI

--- a/src/main/resources/assets/sapturretmod/lang/en_us.json
+++ b/src/main/resources/assets/sapturretmod/lang/en_us.json
@@ -177,6 +177,7 @@
   "gui.sapturretmod.tcu.targets.smart.tamed": "Tamed Awareness",
   "gui.sapturretmod.tcu.targets.smart.age": "Age Awareness",
   "gui.sapturretmod.tcu.targets.smart.count": "Count Awareness",
+  "gui.sapturretmod.tcu.targets.smart.priority": "Priority Awareness",
   "gui.sapturretmod.tcu.targets.smart.turret_ignore": "Ignore other turrets",
   "gui.sapturretmod.tcu.targets.smart.turret_same": "Ignore entities targeted\nby turrets of the same type",
   "gui.sapturretmod.tcu.targets.smart.turret_all": "Ignore entities targeted\nby turrets of any type",
@@ -191,6 +192,11 @@
   "gui.sapturretmod.tcu.targets.smart.count_global_more": "Shoot when global entity\namount is more than...",
   "gui.sapturretmod.tcu.targets.smart.count_individual_less": "Shoot when amount of the same\ntype of entity is less than...",
   "gui.sapturretmod.tcu.targets.smart.count_individual_more": "Shoot when amount of the same\ntype of entity is more than...",
+  "gui.sapturretmod.tcu.targets.smart.priority_first": "First detected",
+  "gui.sapturretmod.tcu.targets.smart.priority_close": "Closest to turret",
+  "gui.sapturretmod.tcu.targets.smart.priority_high_health": "Highest health",
+  "gui.sapturretmod.tcu.targets.smart.priority_low_health": "Lowest health",
+  "gui.sapturretmod.tcu.targets.smart.priority_random": "Random",
   "gui.sapturretmod.tcu.targets.search.placeholder": "Search for targets",
   "gui.sapturretmod.tcu.colorizer.colorcode": "Color Code",
   "gui.sapturretmod.tcu.colorizer.cullfaces": "Cull Inner Faces",
