* turret assembly buttons are now properly labeled
 * recipes are now shown in the slots
 * added upgrade recipes

--- a/src/main/resources/assets/sapturretmod/lang/en_us.json
+++ b/src/main/resources/assets/sapturretmod/lang/en_us.json
@@ -215,16 +215,16 @@
   "gui.sapturretmod.tcu.remote_access.repair_kit": "Repair Kits",
 
   "_comment": "Assembly",
-  "gui.sapturretmod.tassembly.cancel": "Cancel",
-  "gui.sapturretmod.tassembly.automate.enable": "Automate",
-  "gui.sapturretmod.tassembly.automate.disable": "Manual",
-  "gui.sapturretmod.tassembly.crafting": "Crafting:",
-  "gui.sapturretmod.tassembly.rfUsing": "using %d RF/t",
-  "gui.sapturretmod.tassembly.group.misc": "Miscellaneous",
-  "gui.sapturretmod.tassembly.group.turrets": "Turrets",
-  "gui.sapturretmod.tassembly.group.ammo": "Ammunition",
-  "gui.sapturretmod.tassembly.group.repkit": "Repair Kits",
-  "gui.sapturretmod.tassembly.group.upgrades": "Upgrades",
+  "gui.sapturretmod.assembly.cancel": "Cancel",
+  "gui.sapturretmod.assembly.automate_enable": "Automate",
+  "gui.sapturretmod.assembly.automate_disable": "Manual",
+  "gui.sapturretmod.assembly.crafting": "Crafting:",
+  "gui.sapturretmod.assembly.rfUsing": "using %d RF/t",
+  "gui.sapturretmod.assembly.group.misc": "Miscellaneous",
+  "gui.sapturretmod.assembly.group.turrets": "Turrets",
+  "gui.sapturretmod.assembly.group.ammo": "Ammunition",
+  "gui.sapturretmod.assembly.group.repkit": "Repair Kits",
+  "gui.sapturretmod.assembly.group.upgrades": "Upgrades",
   "_comment": "Generator",
   "gui.sapturretmod.electrogen.efficiency": "Efficiency:",
   "gui.sapturretmod.electrogen.powergen": "Power generated:",
