* finished assembly table recipe tooltip
 * "Speed" assembly upgrade is now its own class with helper methods
 * updated Forge to 36.2.34

--- a/src/main/resources/assets/sapturretmod/lang/en_us.json
+++ b/src/main/resources/assets/sapturretmod/lang/en_us.json
@@ -67,7 +67,7 @@
   "item.sapturretmod.upgrade.applicable_to": "Only Applicable On:",
   "item.sapturretmod.upgrade.tier_range_single": "Only for Tier:",
   "item.sapturretmod.upgrade.tier_range_multiple": "Only for Tiers:",
-  "item.sapturretmod.upgrade.shift_details": "<Hold Shift>",
+  "item.sapturretmod.upgrade.shift_details": "<Hold Sneak for details>",
   "item.sapturretmod.empty_upgrade": "Upgrade Base",
   "item.sapturretmod.health_1_upgrade": "Health I Upgrade",
   "item.sapturretmod.health_2_upgrade": "Health II Upgrade",
@@ -85,7 +85,7 @@
   "item.sapturretmod.infinite_economy_upgrade": "Infinitas Oeconomia Upgrade",
   "item.sapturretmod.ender_gain_medium_upgrade": "Ender Gain Medium Upgrade",
   "item.sapturretmod.fuel_purifier_upgrade": "Fuel Purifier Upgrade",
-  "item.sapturretmod.shield_personal_upgrade": "Personal Shield Upgrade",
+  "item.sapturretmod.personal_shield_upgrade": "Personal Shield Upgrade",
   "item.sapturretmod.shield_projectile_upgrade": "Projectile Deflector Upgrade",
   "item.sapturretmod.shield_explosive_upgrade": "Explosion Absorber Upgrade",
   "item.sapturretmod.shield_strength_1_upgrade": "Shield Amplifier I Upgrade",
@@ -124,6 +124,7 @@
   "death.attack.sapturretmod.flamethrower_turret": "%1$s has been cooked well-done by %2$s",
 
   "_comment": "### GUI ####",
+  "gui.sapturretmod.item_title_count": "%sx %s",
   "_comment": "TCU",
   "gui.sapturretmod.tcu.label.health.text": "Health:",
   "gui.sapturretmod.tcu.label.health.value": "%s hearts",
@@ -219,7 +220,7 @@
   "gui.sapturretmod.assembly.automate_enable": "Automate",
   "gui.sapturretmod.assembly.automate_disable": "Manual",
   "gui.sapturretmod.assembly.crafting": "Crafting:",
-  "gui.sapturretmod.assembly.rfUsing": "using %d RF/t",
+  "gui.sapturretmod.assembly.recipe_rft": "%s RF/t",
   "gui.sapturretmod.assembly.group.misc": "Miscellaneous",
   "gui.sapturretmod.assembly.group.turrets": "Turrets",
   "gui.sapturretmod.assembly.group.ammo": "Ammunition",
