* lots of work on the turret registry
 * added command to manipulate the player list registry
 * added some missing crafting recipes

--- a/src/main/resources/assets/sapturretmod/lang/en_us.json
+++ b/src/main/resources/assets/sapturretmod/lang/en_us.json
@@ -82,7 +82,7 @@
   "item.sapturretmod.smart_targeting_upgrade": "Smart Targeting Upgrade",
   "item.sapturretmod.economy_1_upgrade": "Economy I Upgrade",
   "item.sapturretmod.economy_2_upgrade": "Economy II Upgrade",
-  "item.sapturretmod.infinite_economy_upgrade": "Infinitas Oeconomia Upgrade",
+  "item.sapturretmod.infinite_economy_upgrade": "Infinite Economy Upgrade",
   "item.sapturretmod.ender_gain_medium_upgrade": "Ender Gain Medium Upgrade",
   "item.sapturretmod.fuel_purifier_upgrade": "Fuel Purifier Upgrade",
   "item.sapturretmod.personal_shield_upgrade": "Personal Shield Upgrade",
