* added recipes and lexicon entries to repair kits
 * fixed name and icon of repair kits
 * re-added regeneration repair kit mk1

--- a/src/main/resources/assets/sapturretmod/lang/en_us.json
+++ b/src/main/resources/assets/sapturretmod/lang/en_us.json
@@ -57,11 +57,11 @@
   "item.sapturretmod.ammo_cartridge": "Ammunition Cartridge",
   "item.sapturretmod.ammo_cartridge.stored": "Stored: %dx %s",
   "_comment": "Repair Kits",
-  "item.sapturretmod.repair_kit_standard_1": "Repair Kit HS05",
-  "item.sapturretmod.repair_kit_standard_2": "Repair Kit HS10",
-  "item.sapturretmod.repair_kit_standard_3": "Repair Kit HS15",
-  "item.sapturretmod.repair_kit_standard_4": "Repair Kit HS20",
-  "item.sapturretmod.repair_kit_regeneration_1": "Repair Kit HR01-40",
+  "item.sapturretmod.standard_repair_kit_mk1": "Repair Kit HS05",
+  "item.sapturretmod.standard_repair_kit_mk2": "Repair Kit HS10",
+  "item.sapturretmod.standard_repair_kit_mk3": "Repair Kit HS15",
+  "item.sapturretmod.standard_repair_kit_mk4": "Repair Kit HS20",
+  "item.sapturretmod.regeneration_repair_kit_mk1": "Repair Kit HR01-45",
   "_comment": "Turret Upgrades",
   "item.sapturretmod.upgrade.requires": "Requires:",
   "item.sapturretmod.upgrade.applicable_to": "Only Applicable On:",
