* added available modifier info to TCU levels page
 * fixed TCU navigation tooltips flickering

--- a/src/main/resources/assets/sapturretmod/lang/en_us.json
+++ b/src/main/resources/assets/sapturretmod/lang/en_us.json
@@ -184,6 +184,9 @@
   "gui.sapturretmod.tcu.leveling.excess_xp": "(+%s XP)",
   "gui.sapturretmod.tcu.leveling.modifier": "Modifiers",
   "gui.sapturretmod.tcu.leveling.retrieve": "Retrieve excess XP",
+  "gui.sapturretmod.tcu.leveling.info.show": "Show available modifiers",
+  "gui.sapturretmod.tcu.leveling.info.hide": "Hide available modifiers",
+  "gui.sapturretmod.tcu.leveling.info.level": "Level %s",
   "gui.sapturretmod.tcu.leveling.modValue": "%s %%",
   "gui.sapturretmod.tcu.targets.smart.turret": "Turret Awareness",
   "gui.sapturretmod.tcu.targets.smart.tamed": "Tamed Awareness",
